--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
   <body>
     <h1>Todo List</h1>
-  
+    
+    <div>
+      <button onclick="handlers.toggleAll()">Toggle All</button>
+    </div>
+      
     <div>
       <button onclick="handlers.addTodo()">Add</button>
       <input id="addTodoTextInput" type="text">
